# india-job-alerts

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: update-jobs.yml
data/: jobs-today.json  posted-jobs.json
docs/: index.html
output/: captions-2026-07-17.md  captions.txt
scripts/: categorizer.py  dedup.py  format_captions.py  generate_html_board.py  generate_readme.py  generate_readme_jobs.py  location_parser.py  scraper.py
tests/: test_categorizer.py  test_dedup.py  test_format_captions.py  test_job_fields.py  test_location_parser.py  test_scraper.py
