[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "india-job-alerts"
version = "1.0.0"
description = "Automated India job alerts – scraped, deduplicated, and formatted for Instagram"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["jobs", "india", "scraper", "instagram", "automation"]
classifiers = [
    "Development Status :: 5 – Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
